[package]
name = "tencentcloud-cls-sdk-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.0"
thiserror = "1.0"
chrono = "0.4"
sha1 = "0.6.0"
rustc-serialize = "0.3"
quick-protobuf = "0.8"
bytes = "1.6.0"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
lz4_flex = { version = "0.11" }
zstd = "0.13.1"

[dependencies.reqwest]
version = "0.11"