[package]
name = "tencentcloud-cls-sdk-rust"
version = "0.0.2"
edition = "2021"
authors = ["farmerx <farmerx@163.com>"]
description = "腾讯云日志服务CLS SDK"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
url = "2.5.0"
thiserror = "1.0"
chrono = "0.4"
sha1 = "0.6.0"
rustc-serialize = "0.3"
quick-protobuf = "0.8"
bytes = "1.6.0"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
lz4_flex = { version = "0.11" }
zstd = "0.13.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.reqwest]
version = "0.11"
